welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: '<-' expected but ')' found.
  for (i<1 to t-1) {
                 ^Array2:19: error: illegal start of simple expression
} 
^